--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <canvas id="canvas" width="1000px" height="500px"></canvas>
         </div>
         <div class="hidden">
-            <img src="assets/img/heli.png" id="heli">
+            <img src="assets/img/heli.jpg" id="heli">
             <img src="assets/img/plane3.png" id="plane">
             <img src="assets/img/bullet.png" id="bullet">
         </div>
